--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -975,7 +975,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/150 [00:00<?, ?it/s]"
+      "Average Metric: 3.00 / 3 (100.0%):   2%|▏         | 3/150 [00:28<15:44,  6.42s/it]  "
      ]
     }
    ],
