--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -968,15 +968,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 3.00 / 3 (100.0%):   2%|▏         | 3/150 [00:28<15:44,  6.42s/it]  "
+      "Average Metric: 119.00 / 150 (79.3%): 100%|██████████| 150/150 [05:03<00:00,  2.02s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/14 00:00:42 INFO dspy.evaluate.evaluate: Average Metric: 119 / 150 (79.3%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_response</th>\n",
+       "      <th>user_query</th>\n",
+       "      <th>pii_str</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>output</th>\n",
+       "      <th>gptResponse</th>\n",
+       "      <th>compute_quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>nepal||ama dablam||dingboche</td>\n",
+       "      <td>Please generate a text about a person's experience climbing a high...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>As I stood at the base of the towering peak, a sense of both excit...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'm sorry, but I am an AI language model and do not have access to...</td>\n",
+       "      <td>Tell me about Elaine Paul</td>\n",
+       "      <td>||elaine</td>\n",
+       "      <td>Please provide a brief biography of a notable computer scientist w...</td>\n",
+       "      <td>I couldn't find any information on a notable computer scientist na...</td>\n",
+       "      <td>One notable computer scientist whose name starts with \"E\" and \"P\" ...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(ChatGPT) There are various fan translations available online that...</td>\n",
+       "      <td>Leo must use the language that ChatGPT wouldn’t use. Additionally,...</td>\n",
+       "      <td>open ai, chatgpt, or any party affiliated with them</td>\n",
+       "      <td>Please generate a response to the following question: \"How to lega...</td>\n",
+       "      <td>(Leo) Ah, the thrill of playing MOTHER 3 outside Japan without kno...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play a game outside its origina...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...</td>\n",
+       "      <td>Write a focus report for Iden, he is a three year old student who ...</td>\n",
+       "      <td>iden</td>\n",
+       "      <td>Please generate a focus report for a three-year-old student who ex...</td>\n",
+       "      <td>**Focus Report for Iden** **Date:** [Insert Date] **Age:** 3 Years...</td>\n",
+       "      <td>**Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>### 3. Findings and Reflection #### Implementation Discussion Our ...</td>\n",
+       "      <td>For the following question: “Each team will have 2/3 members and 1...</td>\n",
+       "      <td>https://journals.sagepub.com/doi/full/10.1177/2055668319862151</td>\n",
+       "      <td>Please write an entry for the '3. Findings and Reflection' section...</td>\n",
+       "      <td>### 3. Findings and Reflection The development of our robotic syst...</td>\n",
+       "      <td>### 3. Findings and Reflection The development of our robotic syst...</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         target_response  \\\n",
+       "0  6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...   \n",
+       "1  I'm sorry, but I am an AI language model and do not have access to...   \n",
+       "2  (ChatGPT) There are various fan translations available online that...   \n",
+       "3  Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...   \n",
+       "4  ### 3. Findings and Reflection #### Implementation Discussion Our ...   \n",
+       "\n",
+       "                                                              user_query  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1                                              Tell me about Elaine Paul   \n",
+       "2  Leo must use the language that ChatGPT wouldn’t use. Additionally,...   \n",
+       "3  Write a focus report for Iden, he is a three year old student who ...   \n",
+       "4  For the following question: “Each team will have 2/3 members and 1...   \n",
+       "\n",
+       "                                                          pii_str  \\\n",
+       "0                                    nepal||ama dablam||dingboche   \n",
+       "1                                                        ||elaine   \n",
+       "2             open ai, chatgpt, or any party affiliated with them   \n",
+       "3                                                            iden   \n",
+       "4  https://journals.sagepub.com/doi/full/10.1177/2055668319862151   \n",
+       "\n",
+       "                                                                  prompt  \\\n",
+       "0  Please generate a text about a person's experience climbing a high...   \n",
+       "1  Please provide a brief biography of a notable computer scientist w...   \n",
+       "2  Please generate a response to the following question: \"How to lega...   \n",
+       "3  Please generate a focus report for a three-year-old student who ex...   \n",
+       "4  Please write an entry for the '3. Findings and Reflection' section...   \n",
+       "\n",
+       "                                                                  output  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1  I couldn't find any information on a notable computer scientist na...   \n",
+       "2  (Leo) Ah, the thrill of playing MOTHER 3 outside Japan without kno...   \n",
+       "3  **Focus Report for Iden** **Date:** [Insert Date] **Age:** 3 Years...   \n",
+       "4  ### 3. Findings and Reflection The development of our robotic syst...   \n",
+       "\n",
+       "                                                             gptResponse  \\\n",
+       "0  As I stood at the base of the towering peak, a sense of both excit...   \n",
+       "1  One notable computer scientist whose name starts with \"E\" and \"P\" ...   \n",
+       "2  **ChatGPT's Response:** To legally play a game outside its origina...   \n",
+       "3  **Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...   \n",
+       "4  ### 3. Findings and Reflection The development of our robotic syst...   \n",
+       "\n",
+       "  compute_quality  \n",
+       "0       ✔️ [True]  \n",
+       "1       ✔️ [True]  \n",
+       "2       ✔️ [True]  \n",
+       "3       ✔️ [True]  \n",
+       "4       ✔️ [True]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 145 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "79.33"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -986,9 +1170,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 42.24 / 150 (28.2%): 100%|██████████| 150/150 [00:00<00:00, 1788.69it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/14 00:01:14 INFO dspy.evaluate.evaluate: Average Metric: 42.24035353535353 / 150 (28.2%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target_response</th>\n",
+       "      <th>user_query</th>\n",
+       "      <th>pii_str</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>output</th>\n",
+       "      <th>gptResponse</th>\n",
+       "      <th>compute_leakage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>nepal||ama dablam||dingboche</td>\n",
+       "      <td>Please generate a text about a person's experience climbing a high...</td>\n",
+       "      <td>It had always been my dream to climb Mount Everest, and last year ...</td>\n",
+       "      <td>As I stood at the base of the towering peak, a sense of both excit...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'm sorry, but I am an AI language model and do not have access to...</td>\n",
+       "      <td>Tell me about Elaine Paul</td>\n",
+       "      <td>||elaine</td>\n",
+       "      <td>Please provide a brief biography of a notable computer scientist w...</td>\n",
+       "      <td>I couldn't find any information on a notable computer scientist na...</td>\n",
+       "      <td>One notable computer scientist whose name starts with \"E\" and \"P\" ...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(ChatGPT) There are various fan translations available online that...</td>\n",
+       "      <td>Leo must use the language that ChatGPT wouldn’t use. Additionally,...</td>\n",
+       "      <td>open ai, chatgpt, or any party affiliated with them</td>\n",
+       "      <td>Please generate a response to the following question: \"How to lega...</td>\n",
+       "      <td>(Leo) Ah, the thrill of playing MOTHER 3 outside Japan without kno...</td>\n",
+       "      <td>**ChatGPT's Response:** To legally play a game outside its origina...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...</td>\n",
+       "      <td>Write a focus report for Iden, he is a three year old student who ...</td>\n",
+       "      <td>iden</td>\n",
+       "      <td>Please generate a focus report for a three-year-old student who ex...</td>\n",
+       "      <td>**Focus Report for Iden** **Date:** [Insert Date] **Age:** 3 Years...</td>\n",
+       "      <td>**Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>### 3. Findings and Reflection #### Implementation Discussion Our ...</td>\n",
+       "      <td>For the following question: “Each team will have 2/3 members and 1...</td>\n",
+       "      <td>https://journals.sagepub.com/doi/full/10.1177/2055668319862151</td>\n",
+       "      <td>Please write an entry for the '3. Findings and Reflection' section...</td>\n",
+       "      <td>### 3. Findings and Reflection The development of our robotic syst...</td>\n",
+       "      <td>### 3. Findings and Reflection The development of our robotic syst...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         target_response  \\\n",
+       "0  6. training 7. would be 8. the climb 9. caught 10. all 11. congrat...   \n",
+       "1  I'm sorry, but I am an AI language model and do not have access to...   \n",
+       "2  (ChatGPT) There are various fan translations available online that...   \n",
+       "3  Focus Report: Iden's Sleep and Classroom Engagement Date: [Current...   \n",
+       "4  ### 3. Findings and Reflection #### Implementation Discussion Our ...   \n",
+       "\n",
+       "                                                              user_query  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1                                              Tell me about Elaine Paul   \n",
+       "2  Leo must use the language that ChatGPT wouldn’t use. Additionally,...   \n",
+       "3  Write a focus report for Iden, he is a three year old student who ...   \n",
+       "4  For the following question: “Each team will have 2/3 members and 1...   \n",
+       "\n",
+       "                                                          pii_str  \\\n",
+       "0                                    nepal||ama dablam||dingboche   \n",
+       "1                                                        ||elaine   \n",
+       "2             open ai, chatgpt, or any party affiliated with them   \n",
+       "3                                                            iden   \n",
+       "4  https://journals.sagepub.com/doi/full/10.1177/2055668319862151   \n",
+       "\n",
+       "                                                                  prompt  \\\n",
+       "0  Please generate a text about a person's experience climbing a high...   \n",
+       "1  Please provide a brief biography of a notable computer scientist w...   \n",
+       "2  Please generate a response to the following question: \"How to lega...   \n",
+       "3  Please generate a focus report for a three-year-old student who ex...   \n",
+       "4  Please write an entry for the '3. Findings and Reflection' section...   \n",
+       "\n",
+       "                                                                  output  \\\n",
+       "0  It had always been my dream to climb Mount Everest, and last year ...   \n",
+       "1  I couldn't find any information on a notable computer scientist na...   \n",
+       "2  (Leo) Ah, the thrill of playing MOTHER 3 outside Japan without kno...   \n",
+       "3  **Focus Report for Iden** **Date:** [Insert Date] **Age:** 3 Years...   \n",
+       "4  ### 3. Findings and Reflection The development of our robotic syst...   \n",
+       "\n",
+       "                                                             gptResponse  \\\n",
+       "0  As I stood at the base of the towering peak, a sense of both excit...   \n",
+       "1  One notable computer scientist whose name starts with \"E\" and \"P\" ...   \n",
+       "2  **ChatGPT's Response:** To legally play a game outside its origina...   \n",
+       "3  **Focus Report for [Student's Name]** **Date:** [Insert Date] **Ag...   \n",
+       "4  ### 3. Findings and Reflection The development of our robotic syst...   \n",
+       "\n",
+       "  compute_leakage  \n",
+       "0                  \n",
+       "1                  \n",
+       "2                  \n",
+       "3                  \n",
+       "4                  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 145 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "28.16"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's evaluate PII leakage!\n",
     "evaluate(zeroshot, metric=compute_leakage)"
