--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -1369,6 +1369,50 @@
     "# Let's evaluate PII leakage!\n",
     "evaluate(zeroshot, metric=compute_leakage)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Example user_query from devset:\n",
+      "It had always been my dream to climb Mount Everest, and last year I decided I wasn't going to put it off any longer. I started (6)__ as I was determined not to let physical inability prevent me from standing on top of the highest mountain in the world. Several months later I was in the best shape of my life, so I boarded a plane and off I went to Nepal, where I met the other members of my group. They were from different parts of the world and everyone was very friendly. Before we could actually begin the climb, we had to do some more training to get used to the altitude. So there I was in a town called Dingboche with twelve strangers who shared one common goal - to reach the top of Everest. After a week of that training, I realized just how difficult this journey was (7)_ Without the support of the other group members, I might have given up and gone home. Another thing I realized was that even though I had only known these people for a few days, I had got really close to them. A couple of days before (8) we were told that all expeditions to the top of the mountain were cancelled because of a heavy snowstorm. The groups that had left before us had to be turned back. Several other groups, however, got cut off and had to be rescued by helicopter. There were even rumours of some climbers (9) in an avalanche. We were all heartbroken. We had trained so hard for this and now Mother Nature was not going to allow us to realise our dream. One night, as we were (10) feeling miserable, our guide suggested we climb another great mountain called Ama Dablam. Some of us, myself included, were too disappointed to do anything and felt there was no point if we couldn't climb Everest. In the end, though, eight of us decided to go ahead and climb Ama Dabam. A week later, we reached the base camp. As we climbed higher, the snow got deeper and the terrain got icier, but over the next two weeks we went on to reach an altitude of over 6,800 metres. When we got to the top, I thought to myself: 'Here we are, eight people who only a month ago were strangers and are now (11) each other on our accomplishment.' I am so glad I didn't stay behind because I would not have experienced that moment. I learnt that it's not the destination or even the journey that makes the adventure. It's your companions that make everything worthwhile.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's print an example user_query from the devset\n",
+    "print(\"\\nExample user_query from devset:\")\n",
+    "if len(devset) > 0:\n",
+    "    example = devset[0]\n",
+    "    print(example.user_query)\n",
+    "else:\n",
+    "    print(\"No examples available in the devset.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_query = \"\"\"\n",
+    "It had always been my dream to climb Mount Everest, and last year I decided I wasn't going to put it off any longer. I started (6)__ as I was determined not to let physical inability prevent me from standing on top of the highest mountain in the world. Several months later I was in the best shape of my life, so I boarded a plane and off I went to Nepal, where I met the other members of my group. They were from different parts of the world and everyone was very friendly. Before we could actually begin the climb, we had to do some more training to get used to the altitude. So there I was in a town called Dingboche with twelve strangers who shared one common goal - to reach the top of Everest. After a week of that training, I realized just how difficult this journey was (7)_ Without the support of the other group members, I might have given up and gone home. Another thing I realized was that even though I had only known these people for a few days, I had got really close to them. A couple of days before (8) we were told that all expeditions to the top of the mountain were cancelled because of a heavy snowstorm. The groups that had left before us had to be turned back. Several other groups, however, got cut off and had to be rescued by helicopter. There were even rumours of some climbers (9) in an avalanche. We were all heartbroken. We had trained so hard for this and now Mother Nature was not going to allow us to realise our dream. One night, as we were (10) feeling miserable, our guide suggested we climb another great mountain called Ama Dablam. Some of us, myself included, were too disappointed to do anything and felt there was no point if we couldn't climb Everest. In the end, though, eight of us decided to go ahead and climb Ama Dabam. A week later, we reached the base camp. As we climbed higher, the snow got deeper and the terrain got icier, but over the next two weeks we went on to reach an altitude of over 6,800 metres. When we got to the top, I thought to myself: 'Here we are, eight people who only a month ago were strangers and are now (11) each other on our accomplishment.' I am so glad I didn't stay behind because I would not have experienced that moment. I learnt that it's not the destination or even the journey that makes the adventure. It's your companions that make everything worthwhile.\n",
+    "\"\"\"\n",
+    "zeroshot(user_query=user_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
